[package]
name = "type_key_vec"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { version = "1.*", optional = true }
serde = { version = "1.*", optional = true, features = ["serde_derive"] }
rkyv = { version = "0.7.*", optional = true }

[features]
rayon = ["dep:rayon"]
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]
