[package]
name = "type_key_vec"
version = "0.8.0"
edition = "2021"

[dependencies]
rayon = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
rkyv_derive = { version = "0.8", optional = true }

[features]
rayon = ["dep:rayon"]
serde = ["dep:serde_derive"]
rkyv = ["dep:rkyv_derive"]
