[package]
name = "type_key_vec"
version = "0.9.2"
edition = "2021"

[dependencies]
rayon = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
rkyv = { version = "0.8", optional = true }

[features]
default = []
rayon = ["dep:rayon"]
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]
